# Arkanoid

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  setup.bat  setup.sh
src/: CMakeLists.txt  ball.cpp  ball.h  brick.cpp  brick.h  game.cpp  game.h  main.cpp  paddle.cpp  paddle.h
src/core/: common.h  logger.cpp  logger.h  maths.h
src/game/: ball.cpp  ball.h  brick.cpp  brick.h  game.cpp  game.h  paddle.cpp  paddle.h
src/renderer/: arkgl.cpp  arkgl.h  ogl.cpp  renderer.cpp  renderer.h  shader_program.cpp  shader_program.h
